@@ -131,6 +131,7 @@ const GenericMatrix& UmfpackLUSolver::get_operator() const
 dolfin::uint UmfpackLUSolver::solve(GenericVector& x, const GenericVector& b)
 {
   assert(A);
+  check_dimensions(get_operator(), x, b);
 
   // Get some parameters
   const bool reuse_fact   = parameters["reuse_factorization"];
@@ -155,6 +156,7 @@ dolfin::uint UmfpackLUSolver::solve(GenericVector& x, const GenericVector& b)
 dolfin::uint UmfpackLUSolver::solve(const GenericMatrix& A, GenericVector& x,
                                     const GenericVector& b)
 {
+  check_dimensions(A, x, b);
   set_operator(A);
   return solve(x, b);
 }
